# Path-Tracing-Practice

./: CMakeLists.txt  README.md  cmake_install.cmake  image.ppm  main  main.cpp  update_image.sh
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/x86_64/: main.yml
src/: AABB.hpp  BVH.hpp  Camera.hpp  Color.hpp  Hittable.hpp  HittableList.hpp  Hittable_list.hpp  Interval.hpp  Material.hpp  OBN.hpp  ONB.hpp  PDF.hpp  Quad.hpp  Ray.hpp  STBImageLoader.hpp  Sphere.hpp  Texture.hpp  Utils.hpp  Vector3.hpp  aabb.h  bvh.h  camera.h  color.h  hittable.h  hittable_list.h  interval.h  material.h  quad.h  ray.h  rtweekend.h  sphere.h  texture.h  vec3.h
